# rwkv-cpp-accelerated

./: .gitignore  CMakeLists.txt  LICENCE  README.md  a.out  build.bat  build.sh  chat.cpp  readme.MD  rwkv.cu  rwkv.h  torchbind.cpp  torchbind.py  util.h
.github/workflows/: msbuild.yml  ubuntu.yml
bindings/pybind/: Dockerfile.base  binding.py  build.sh  c_binding.cpp
bindings/pytorch/: example.py  torch_binding.py  torchbind.cpp
converter/: ConvertFile.py  convert_model.py  cpp_save_tensor.cpp  requirements.txt
examples/httpserver/: CMakeLists.txt  build.sh  server.cpp
examples/pybind-flask/: example_run.sh  server.py
examples/pybind-interactive-chat/: chat.py
examples/pytorch-interactive-chat/: chat.py
examples/storygen/: CMakeLists.txt  Makefile  amd.sh  build.bat  build.sh  storygen.cpp  vulkan.sh
examples/terminalchat/: CMakeLists.txt  build.bat  build.sh  buildbasic.bat  buildbasic.sh  chat.cpp
examples/terminalchat/release/vocab/: vocab.json
examples/vectordb/: CMakeLists.txt  build.sh  vectordb.cpp
export/: convert.sh  export.cpp  export.py
include/: rwkv.h
include/api/: vudakernel.hpp
include/rwkv/cpu/: rwkv.cpp
include/rwkv/cuda/: rwkv.cu  rwkv.hip
include/rwkv/enums/: enum.h
include/rwkv/rwkv/: rwkv.h
include/rwkv/sampler/: typical.h
include/rwkv/tokenizer/: ctre-unicode.hpp  simdjson.h  tokenizer.cpp  tokenizer.h  worldTokenizer.h
include/rwkv/vulkan/: compileshaders.sh  rwkv.cpp
include/rwkv/vulkan/ops/layernorm/: layernorm.comp  layernorm.h  sum.comp  var.comp
include/rwkv/vulkan/ops/matmul/: kernel_mm8_one.comp  kernel_mm8_oned.comp  kernel_mm8_threec.comp  matmul.h
include/rwkv/vulkan/ops/mix/: mix.h  mixatt.comp  mixffn.comp
include/rwkv/vulkan/ops/set/: movememd2f.comp  movememf2d.comp  setmemdouble.comp  setmemfloat.comp  setx.h
include/rwkv/vulkan/ops/sigmoid/: blockout.comp  sigmoid.comp  sigmoid.h
include/rwkv/vulkan/ops/wkv/: wkv.comp  wkv.h
include/state/: interfacelogicaldevices.hpp  logicaldevice.hpp  vulkanfunc.hpp
release/: chat  merges.txt
samplers/: NumCpp.hpp  typical.h
tests/: test_pybind.py
